# 42-cursus

./: .gitignore
Repaso_examen/: .split3.c.swp  add_prime_sum.c  alpha_mirror.c  alpha_mirror1.c  atoi_base.c  atoi_base2.c  atoi_base3.c  atoi_base5.c  camel_to_snake.c  camel_to_snake1.c  do_op.c  epur_str.c  epur_str1.c  epur_str2.c  fist_word.c  fizz_buzz.c  flood_fill.c  fprime.c  ft_list.h  ft_list_foreach.c  ft_list_remove.c  ft_list_remove_if.c  ft_list_size.c  ft_strdup.c  hidenp.c  inter.c  inter1.c  is_power_2.c  is_power_2_1.c  is_power_2_2.c  itoa.c  itoa2.c  itoa3.c  itoa4.c  last_word.c  lcm.c  paramsum.c  pgcd.c  print_bits.c  print_bits2.c  (+45 more)
Repaso_examen_rank02/: py_cryptic_sorter.py
Repaso_examen_rank03/: py_anagram.py  py_base_converter.py  py_bracket_validator.py  py_cryptic_sorter.py  py_mirror_matrix.py  py_palindrom_string.py
circle_0/: Libft.md
circle_0/Libft/: .ft_split_utils.c.swp  .ft_strchr.c.swp  Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_free_matrix.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  (+45 more)
circle_2/Amazeing/: Makefile  README.md  a_maze_ing.py  config.txt  get_maze_data.py  pyproject.toml  render.py
circle_2/Amazeing/mazegen/: __init__.py  generator.py
circle_2/Amazeing/textures/: exit.xpm  logo_42.xpm  logo_42_red.xpm  logo_42_yellow.xpm  menu_text.xpm  path.xpm  start.xpm  wall_h.xpm  wall_h_blue.xpm  wall_h_green.xpm  wall_v.xpm  wall_v_blue.xpm  wall_v_green.xpm
circle_2/Python08/ex1/: leeme_ex1.py  loading.py  pyproject.toml  readme.MD
(+172 files in other folders)
